Fixes admin search results on smaller screens

--- a/admin/templates/css/admin.css
+++ b/admin/templates/css/admin.css
@@ -4,7 +4,6 @@
 body {
 	background: #262626;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
 	color: #968875;
 	margin: 0;
 	padding: 0;
@@ -31,7 +30,7 @@ h1 {
 }
 
 h2 {
-	font-size: 110%;
+	font-size: 130%;
 	font-weight: bold;
 	margin: 1em 0 0.5em 0;
 	padding: 0;
@@ -59,7 +58,6 @@ ul {
 input, textarea {
   box-sizing: border-box;
   line-height: 180%;
-  font-size: 11pt;
   padding-left: 10px;
   padding-right: 10px;
   margin-bottom: 5px;
@@ -1000,7 +998,7 @@ a.bookmarklet {
 
 
 /*                Responsiveness                   */
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 980px) {
   .collections {
     display: none;
   }
@@ -1028,5 +1026,15 @@ a.bookmarklet {
 
   footer {
     display: none;
+  }
+
+  #search-results {
+    bottom: 0;
+    left: 0;
+    top: 95px;
+  }
+
+  input, textarea, button {
+    font-size: 1.2em;
   }
 }
